--- a/scss/_heading.scss
+++ b/scss/_heading.scss
@@ -1,8 +1,7 @@
 .heading {
   margin: 0 0 32.1rem 16.5rem;
   background-image: url(../assets/bg-pattern-1.svg);
-  background-position-x: 100%;
-  background-position-y: -4rem;
+  background-position: 100% -4rem;
   background-repeat: no-repeat;
 
   &__logo {
