--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@ html {
 body {
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 2rem;
+  background-color: #f2f2f2;
 }
 
 h1 {
@@ -47,8 +48,7 @@ h2 {
 .heading {
   margin: 0 0 32.1rem 16.5rem;
   background-image: url(../assets/bg-pattern-1.svg);
-  background-position-x: 100%;
-  background-position-y: -4rem;
+  background-position: 100% -4rem;
   background-repeat: no-repeat;
 }
 .heading__logo {
@@ -64,4 +64,70 @@ h2 {
   color: #191826;
   line-height: 3.4rem;
   margin-right: 41rem;
+}
+
+.cta {
+  margin: 0 16.5rem 20.2rem 16.5rem;
+  background-color: #191826;
+  height: 60rem;
+  position: relative;
+  background-image: url(../assets/bg-pattern-2.svg);
+  background-position: 33.7rem -4rem;
+  background-repeat: no-repeat;
+}
+.cta__img {
+  position: absolute;
+  height: 64.2rem;
+  left: 10.2rem;
+  top: -21.3rem;
+}
+.cta__card {
+  display: grid;
+  grid-template-rows: repeat(4, -webkit-min-content);
+  grid-template-rows: repeat(4, min-content);
+  padding: 6rem;
+  row-gap: 2.5rem;
+  position: absolute;
+  right: 9.5rem;
+  top: 9rem;
+  width: 44.6rem;
+  height: 62.5rem;
+  border-radius: 1.2rem;
+  background-color: #fa7453;
+}
+.cta__card--headline {
+  color: #fcfaf9;
+}
+.cta__card--text {
+  line-height: 3.4rem;
+  color: #fcfaf9;
+}
+.cta__card--price {
+  color: #fcfaf9;
+}
+.cta__card--price span {
+  font-size: 6.5rem;
+  font-weight: 700;
+}
+.cta__card--buttons {
+  display: grid;
+  row-gap: 1.6rem;
+  font-size: 1.8rem;
+  font-weight: 700;
+}
+.cta__card--buttons-ios {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.8rem;
+  color: #fcfaf9;
+  background-color: #191826;
+}
+.cta__card--buttons-android {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.8rem;
+  color: #191826;
+  background-color: #fcfaf9;
 }/*# sourceMappingURL=main.css.map */
