--- a/main.css
+++ b/main.css
@@ -36,6 +36,11 @@ h2 {
   width: 33.3rem;
   height: 6.1rem;
 }
+@media (max-width: 1440px) {
+  .btn {
+    width: 29.6rem;
+  }
+}
 
 .container {
   max-width: 144rem;
@@ -43,6 +48,20 @@ h2 {
   background-repeat: no-repeat;
   background-position: 60% 100%;
   margin: 0 auto;
+}
+@media (max-width: 1440px) {
+  .container {
+    max-width: 76.8rem;
+    background-image: url(../assets/bg-main-tablet.png);
+    background-position: 80% -50%;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    max-width: 37.5rem;
+    background-image: url(../assets/bg-main-phone.png);
+    background-position: 80% -50%;
+  }
 }
 
 button,
@@ -56,19 +75,75 @@ a {
   background-position: 100% -4rem;
   background-repeat: no-repeat;
 }
+@media (max-width: 1440px) {
+  .heading {
+    margin: 0 0 0 4rem;
+    background-size: 26.667rem 40rem;
+    background-position: calc(100% + 3.567rem) -3.2rem;
+  }
+}
+@media (max-width: 768px) {
+  .heading {
+    margin: 0 2.4rem;
+    background-image: none;
+  }
+}
 .heading__logo {
   margin-bottom: 12.7rem;
   margin-top: 6.2rem;
+}
+@media (max-width: 1440px) {
+  .heading__logo {
+    margin-bottom: 9.5rem;
+  }
+}
+@media (max-width: 768px) {
+  .heading__logo {
+    margin-bottom: 6.4rem;
+  }
 }
 .heading__headline {
   margin-bottom: 4rem;
   margin-right: 26rem;
 }
+@media (max-width: 1440px) {
+  .heading__headline {
+    font-size: 6.4rem;
+    line-height: 6.4rem;
+    margin-right: 20rem;
+    margin-bottom: 3rem;
+  }
+}
+@media (max-width: 768px) {
+  .heading__headline {
+    font-size: 4rem;
+    line-height: 4.8rem;
+    margin-bottom: 2rem;
+    margin-right: 0;
+  }
+}
 .heading__text {
-  margin-bottom: 32.1rem;
+  margin-bottom: 32rem;
   color: #191826;
   line-height: 3.4rem;
   margin-right: 41rem;
+}
+@media (max-width: 1440px) {
+  .heading__text {
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 2.8rem;
+    margin-bottom: 25rem;
+    margin-right: 21.5rem;
+  }
+}
+@media (max-width: 768px) {
+  .heading__text {
+    margin-bottom: 16.6rem;
+    font-size: 1.6rem;
+    line-height: 2.6rem;
+    margin-right: 0;
+  }
 }
 
 .cta {
@@ -80,11 +155,38 @@ a {
   background-position: 33.7rem -4rem;
   background-repeat: no-repeat;
 }
+@media (max-width: 1440px) {
+  .cta {
+    margin: 0 4rem 18.3rem 4rem;
+    background-position: 22.9rem -3.1rem;
+    background-size: 28rem 42rem;
+  }
+}
+@media (max-width: 768px) {
+  .cta {
+    margin: 0 0 39rem 0;
+    background-position: 4.8rem 0;
+  }
+}
 .cta__img {
   position: absolute;
   height: 64.2rem;
   left: 10.2rem;
   top: -21.3rem;
+}
+@media (max-width: 1440px) {
+  .cta__img {
+    height: 55.6rem;
+    left: 6.4rem;
+    top: -13.8rem;
+  }
+}
+@media (max-width: 768px) {
+  .cta__img {
+    height: 43rem;
+    left: 8rem;
+    top: -9.8rem;
+  }
 }
 .cta__card {
   display: grid;
@@ -100,15 +202,55 @@ a {
   border-radius: 1.2rem;
   background-color: #fa7453;
 }
+@media (max-width: 1440px) {
+  .cta__card {
+    right: 5.8rem;
+    top: 15rem;
+    width: 39.9rem;
+    height: 54.6rem;
+    padding: 4.8rem;
+    row-gap: 0;
+  }
+}
+@media (max-width: 768px) {
+  .cta__card {
+    width: 37.5rem;
+    right: 0;
+    top: 38rem;
+  }
+}
 .cta__card--headline {
   color: #fcfaf9;
+}
+@media (max-width: 1440px) {
+  .cta__card--headline {
+    font-size: 3.2rem;
+    margin-bottom: 0.5rem;
+  }
 }
 .cta__card--text {
   line-height: 3.4rem;
   color: #fcfaf9;
 }
+@media (max-width: 1440px) {
+  .cta__card--text {
+    font-size: 1.8rem;
+    line-height: 2.8rem;
+    margin-bottom: 1.5rem;
+  }
+}
 .cta__card--price {
   color: #fcfaf9;
+}
+@media (max-width: 1440px) {
+  .cta__card--price {
+    margin-bottom: 1.8rem;
+  }
+}
+@media (max-width: 768px) {
+  .cta__card--price {
+    font-size: 2rem;
+  }
 }
 .cta__card--price span {
   font-size: 6.5rem;
@@ -148,11 +290,33 @@ a {
 .footer {
   display: flex;
   align-items: center;
-  margin: 0 16.5rem 10rem 16.5rem;
+  margin: 0 16.5rem 8rem 16.5rem;
+}
+@media (max-width: 1440px) {
+  .footer {
+    display: grid;
+    grid-template-columns: -webkit-max-content 1fr;
+    grid-template-columns: max-content 1fr;
+    margin: 0 4rem;
+  }
+}
+@media (max-width: 768px) {
+  .footer {
+    display: grid;
+    grid-template-columns: -webkit-max-content;
+    grid-template-columns: max-content;
+    margin: 0 2.4rem;
+  }
 }
 .footer__logo {
   margin-right: 13.8rem;
   align-self: flex-start;
+}
+@media (max-width: 1440px) {
+  .footer__logo {
+    grid-column: 1/-1;
+    margin-bottom: 3.2rem;
+  }
 }
 .footer__text {
   margin-right: 30rem;
@@ -161,6 +325,16 @@ a {
   line-height: 2.6rem;
   font-weight: 400;
   color: #191826;
+}
+@media (max-width: 1440px) {
+  .footer__text {
+    margin-right: 0;
+  }
+}
+@media (max-width: 768px) {
+  .footer__text {
+    margin-bottom: 6.4rem;
+  }
 }
 .footer__text a {
   font-weight: 700;
@@ -171,4 +345,9 @@ a {
   justify-self: flex-end;
   display: flex;
   gap: 2rem;
+}
+@media (max-width: 768px) {
+  .footer__links {
+    justify-self: start;
+  }
 }/*# sourceMappingURL=main.css.map */
