--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,11 +1,28 @@
 .footer {
   display: flex;
   align-items: center;
-  margin: 0 16.5rem 10rem 16.5rem;
+  margin: 0 16.5rem 8rem 16.5rem;
+
+  @include respond(tablet) {
+    display: grid;
+    grid-template-columns: max-content 1fr;
+    margin: 0 4rem;
+  }
+
+  @include respond(phone) {
+    display: grid;
+    grid-template-columns: max-content;
+    margin: 0 2.4rem;
+  }
 
   &__logo {
     margin-right: 13.8rem;
     align-self: flex-start;
+
+    @include respond(tablet) {
+      grid-column: 1 / -1;
+      margin-bottom: 3.2rem;
+    }
   }
   &__text {
     margin-right: 30rem;
@@ -14,6 +31,14 @@
     line-height: 2.6rem;
     font-weight: 400;
     color: $color-black;
+
+    @include respond(tablet) {
+      margin-right: 0;
+    }
+
+    @include respond(phone) {
+      margin-bottom: 6.4rem;
+    }
     & a {
       font-weight: 700;
       text-decoration: none;
@@ -24,7 +49,9 @@
     justify-self: flex-end;
     display: flex;
     gap: 2rem;
-    &--icon {
+
+    @include respond(phone) {
+      justify-self: start;
     }
   }
 }
