--- a/scss/_cta.scss
+++ b/scss/_cta.scss
@@ -109,6 +109,7 @@
         gap: 0.8rem;
         color: $color-white;
         background-color: $color-black;
+        transition: all 0.2s;
 
         &:hover,
         :active {
@@ -122,6 +123,7 @@
         gap: 0.8rem;
         color: $color-black;
         background-color: $color-white;
+        transition: all 0.2s;
 
         &:hover,
         :active {
