--- a/main.css
+++ b/main.css
@@ -299,7 +299,8 @@ a {
 .footer {
   display: flex;
   align-items: center;
-  margin: 0 16.5rem 8rem 16.5rem;
+  margin: 0 16.5rem 0rem 16.5rem;
+  padding-bottom: 8rem;
 }
 @media (max-width: 1400px) {
   .footer {
