--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,7 +1,8 @@
 .footer {
   display: flex;
   align-items: center;
-  margin: 0 16.5rem 8rem 16.5rem;
+  margin: 0 16.5rem 0rem 16.5rem;
+  padding-bottom: 8rem;
 
   @include respond(tablet) {
     display: grid;
